# forkd

./: 0001-feat-mem-backend-shared-option-for-MAP-SHARED.patch  CHANGELOG.md  Cargo.toml  DESIGN-v0.4-PHASE3-SPIKE.md  DESIGN-v0.4-PHASE6.md  DESIGN-v0.4-USE-CASES.md  DESIGN-v0.4.md  DESIGN-v0.5-diff-snapshot-chains.md  DESIGN.md  FIRECRACKER-UPSTREAM-PROPOSAL.md  LICENSE  NOTICE  PITCH.md  README-zh.md  README.md  ROADMAP.md  WEEK1.md  registry.json
.github/workflows/: ci-typescript.yml  ci.yml  publish-npm.yml
bench/: CUBESANDBOX.md  cube-bench.py  cube-replay.sh  generate_charts.py
bench/chain-spawn/: RESULTS-v0.5.1-pip-chain.md
bench/ksm-memfd/: RESULTS.md  probe.py
bench/pause-window/: PROBE-multi-branch-anomaly.md  RESULTS-v0.3.md  multi-branch-sweep.csv  probe-futex-trace.sh  probe-multi-branch-strace.sh  probe-offcpu.sh  probe-perf-flamegraph.sh  sweep-multi-branch.sh
crates/forkd-cli/: Cargo.toml
crates/forkd-controller/: Cargo.toml
crates/forkd-controller/src/: api.rs  audit.rs  http.rs  lib.rs  main.rs  state.rs
crates/forkd-vmm/: Cargo.toml
docs/: API.md  COMPARISON.md  HUB.md  INTEGRATION-BOXLITE.md  ROADMAP.md  VENDORED-FIRECRACKER.md  initial-issues.md
docs/assets/: demo-en-runner.sh  demo-en.cast  demo-zh-runner.sh  (+1 more)
firecracker-patch/: README.md
recipes/: README.md
rootfs-init/: forkd-agent.py  forkd-init.sh
scripts/: README.md  build-rootfs.sh  create-initial-issues.sh  day1-boot.sh  day2-snapshot.sh  day3-fork.sh  day4-network.sh  day6-scale.sh  netns-setup.sh  netns-teardown.sh  setup-host.sh
sdk/mcp/: README.md  pyproject.toml
sdk/mcp/forkd_mcp/: __init__.py  server.py
(+67 files in other folders)
