[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forkd-mcp"
version = "0.1.0"
description = "Model Context Protocol server for forkd microVM sandboxes"
readme = "README.md"
authors = [{name = "Deeplethe", email = "info@deeplethe.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["mcp", "model-context-protocol", "forkd", "sandbox", "ai-agents", "firecracker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/deeplethe/forkd"
Source = "https://github.com/deeplethe/forkd/tree/main/sdk/mcp"
Issues = "https://github.com/deeplethe/forkd/issues"

[project.scripts]
forkd-mcp = "forkd_mcp.server:main"

[tool.setuptools]
packages = ["forkd_mcp"]
